refactor: docs PatientController to yaml
