# back-end/src/main/java/br/com/dental_care/controller/PatientController.java
@@ -2,16 +2,9 @@ package br.com.dental_care.controller;
 
 import br.com.dental_care.dto.PatientDTO;
 import br.com.dental_care.dto.PatientMinDTO;
-import br.com.dental_care.exception.handler.CustomError;
 import br.com.dental_care.service.PatientService;
 import br.com.dental_care.utils.PaginationUtils;
-import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.Parameter;
-import io.swagger.v3.oas.annotations.media.Content;
-import io.swagger.v3.oas.annotations.media.Schema;
-import io.swagger.v3.oas.annotations.responses.ApiResponse;
-import io.swagger.v3.oas.annotations.responses.ApiResponses;
-import io.swagger.v3.oas.annotations.tags.Tag;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
 import org.slf4j.Logger;
@@ -28,33 +21,11 @@ import java.net.URI;
 @RestController
 @RequestMapping("/api/v1/patients")
 @RequiredArgsConstructor
-@Tag(name = "Patient", description = "Endpoints for managing patients")
 public class PatientController {
 
     private final PatientService patientService;
     private final Logger logger = LoggerFactory.getLogger(PatientController.class);
 
-    @Operation(summary = "Find patient by ID", description = "Find a patient by their unique ID.", tags = "Patient")
-    @ApiResponses(value = {
-            @ApiResponse(responseCode = "200", description = "Patient found",
-                    content = @Content(mediaType = "application/json",
-                            schema = @Schema(implementation = PatientDTO.class))),
-            @ApiResponse(responseCode = "400", description = "Bad Request",
-                    content = @Content(mediaType = "application/json",
-                            schema = @Schema(implementation = CustomError.class))),
-            @ApiResponse(responseCode = "401", description = "Unauthorized",
-                    content = @Content(mediaType = "application/json",
-                            schema = @Schema(implementation = CustomError.class))),
-            @ApiResponse(responseCode = "403", description = "Forbidden",
-                    content = @Content(mediaType = "application/json",
-                            schema = @Schema(implementation = CustomError.class))),
-            @ApiResponse(responseCode = "404", description = "Patient not found",
-                    content = @Content(mediaType = "application/json",
-                            schema = @Schema(implementation = CustomError.class))),
-            @ApiResponse(responseCode = "500", description = "Internal Server Error",
-                    content = @Content(mediaType = "application/json",
-                            schema = @Schema(implementation = CustomError.class)))
-    })
     @GetMapping(path = "/{id}")
     @PreAuthorize("hasAnyRole('ROLE_ADMIN')")
     public ResponseEntity<PatientDTO> findById(@PathVariable Long id) {
@@ -63,33 +34,15 @@ public class PatientController {
         return ResponseEntity.ok(dto);
     }
 
-    @Operation(summary = "Find all patients", description = "Retrieve all patients in a paginated format.", tags = "Patient")
-    @ApiResponses(value = {
-            @ApiResponse(responseCode = "200", description = "Patients found",
-                    content = @Content(mediaType = "application/json",
-                            schema = @Schema(implementation = Page.class))),
-            @ApiResponse(responseCode = "400", description = "Bad Request",
-                    content = @Content(mediaType = "application/json",
-                            schema = @Schema(implementation = CustomError.class))),
-            @ApiResponse(responseCode = "401", description = "Unauthorized",
-                    content = @Content(mediaType = "application/json",
-                            schema = @Schema(implementation = CustomError.class))),
-            @ApiResponse(responseCode = "403", description = "Forbidden",
-                    content = @Content(mediaType = "application/json",
-                            schema = @Schema(implementation = CustomError.class))),
-            @ApiResponse(responseCode = "500", description = "Internal Server Error",
-                    content = @Content(mediaType = "application/json",
-                            schema = @Schema(implementation = CustomError.class)))
-    })
     @GetMapping
     @PreAuthorize("hasAnyRole('ROLE_ADMIN')")
     public ResponseEntity<Page<PatientMinDTO>> findAll(
-             @RequestParam(defaultValue = "0")
-             @Parameter(description = "Page number", example = "0") int page,
-             @RequestParam(defaultValue = "10")
-             @Parameter(description = "Page size", example = "10") int size,
-             @RequestParam(defaultValue = "id,asc")
-             @Parameter(description = "Sorting criteria", example = "id,asc") String sort) {
+            @RequestParam(defaultValue = "0")
+            @Parameter(description = "Page number", example = "0") int page,
+            @RequestParam(defaultValue = "10")
+            @Parameter(description = "Page size", example = "10") int size,
+            @RequestParam(defaultValue = "id,asc")
+            @Parameter(description = "Sorting criteria", example = "id,asc") String sort) {
 
         Pageable pageable = PaginationUtils.buildPageable(page, size, sort);
         logger.info("Searching all patients");
@@ -97,24 +50,6 @@ public class PatientController {
         return ResponseEntity.ok(dto);
     }
 
-    @Operation(summary = "Create a new patient", description = "Create a new patient with the provided details.", tags = "Patient")
-    @ApiResponses(value = {
-            @ApiResponse(responseCode = "201", description = "Patient created successfully",
-                    content = @Content(mediaType = "application/json",
-                            schema = @Schema(implementation = PatientDTO.class))),
-            @ApiResponse(responseCode = "400", description = "Bad Request",
-                    content = @Content(mediaType = "application/json",
-                            schema = @Schema(implementation = CustomError.class))),
-            @ApiResponse(responseCode = "401", description = "Unauthorized",
-                    content = @Content(mediaType = "application/json",
-                            schema = @Schema(implementation = CustomError.class))),
-            @ApiResponse(responseCode = "403", description = "Forbidden",
-                    content = @Content(mediaType = "application/json",
-                            schema = @Schema(implementation = CustomError.class))),
-            @ApiResponse(responseCode = "500", description = "Internal Server Error",
-                    content = @Content(mediaType = "application/json",
-                            schema = @Schema(implementation = CustomError.class)))
-    })
     @PostMapping
     @PreAuthorize("hasAnyRole('ROLE_ADMIN')")
     public ResponseEntity<PatientDTO> insert(@Valid @RequestBody PatientDTO dto) {
@@ -128,27 +63,6 @@ public class PatientController {
         return ResponseEntity.created(uri).body(dto);
     }
 
-    @Operation(summary = "Update an existing patient", description = "Update an existing patient by their ID.", tags = "Patient")
-    @ApiResponses(value = {
-            @ApiResponse(responseCode = "200", description = "Patient updated successfully",
-                    content = @Content(mediaType = "application/json",
-                            schema = @Schema(implementation = PatientDTO.class))),
-            @ApiResponse(responseCode = "400", description = "Bad Request",
-                    content = @Content(mediaType = "application/json",
-                            schema = @Schema(implementation = CustomError.class))),
-            @ApiResponse(responseCode = "401", description = "Unauthorized",
-                    content = @Content(mediaType = "application/json",
-                            schema = @Schema(implementation = CustomError.class))),
-            @ApiResponse(responseCode = "403", description = "Forbidden",
-                    content = @Content(mediaType = "application/json",
-                            schema = @Schema(implementation = CustomError.class))),
-            @ApiResponse(responseCode = "404", description = "Patient not found",
-                    content = @Content(mediaType = "application/json",
-                            schema = @Schema(implementation = CustomError.class))),
-            @ApiResponse(responseCode = "500", description = "Internal Server Error",
-                    content = @Content(mediaType = "application/json",
-                            schema = @Schema(implementation = CustomError.class)))
-    })
     @PutMapping(path = "/{id}")
     @PreAuthorize("hasAnyRole('ROLE_ADMIN', 'ROLE_PATIENT')")
     public ResponseEntity<PatientDTO> update(@Valid @RequestBody PatientDTO dto, @PathVariable Long id) {
@@ -157,24 +71,6 @@ public class PatientController {
         return ResponseEntity.ok(dto);
     }
 
-    @Operation(summary = "Delete a patient by ID", description = "Delete a patient by their unique ID.", tags = "Patient")
-    @ApiResponses(value = {
-            @ApiResponse(responseCode = "204", description = "Patient deleted successfully",
-                    content = @Content(mediaType = "application/json",
-                            schema = @Schema(implementation = Void.class))),
-            @ApiResponse(responseCode = "401", description = "Unauthorized",
-                    content = @Content(mediaType = "application/json",
-                            schema = @Schema(implementation = CustomError.class))),
-            @ApiResponse(responseCode = "403", description = "Forbidden",
-                    content = @Content(mediaType = "application/json",
-                            schema = @Schema(implementation = CustomError.class))),
-            @ApiResponse(responseCode = "404", description = "Patient not found",
-                    content = @Content(mediaType = "application/json",
-                            schema = @Schema(implementation = CustomError.class))),
-            @ApiResponse(responseCode = "500", description = "Internal Server Error",
-                    content = @Content(mediaType = "application/json",
-                            schema = @Schema(implementation = CustomError.class)))
-    })
     @DeleteMapping(path = "/{id}")
     @PreAuthorize("hasAnyRole('ROLE_ADMIN')")
     public ResponseEntity<Void> deleteById(@PathVariable Long id) {
