# back-end/src/main/java/br/com/dental_care/controller/RatingController.java
@@ -1,14 +1,7 @@
 package br.com.dental_care.controller;
 
 import br.com.dental_care.dto.RatingDTO;
-import br.com.dental_care.exception.handler.CustomError;
 import br.com.dental_care.service.RatingService;
-import io.swagger.v3.oas.annotations.Operation;
-import io.swagger.v3.oas.annotations.media.Content;
-import io.swagger.v3.oas.annotations.media.Schema;
-import io.swagger.v3.oas.annotations.responses.ApiResponse;
-import io.swagger.v3.oas.annotations.responses.ApiResponses;
-import io.swagger.v3.oas.annotations.tags.Tag;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
 import org.slf4j.Logger;
@@ -26,7 +19,6 @@ import java.net.URI;
 @RestController
 @RequestMapping("/api/v1/ratings")
 @RequiredArgsConstructor
-@Tag(name = "Rating", description = "Endpoints for managing ratings")
 public class RatingController {
 
     private final RatingService ratingService;
